k8s/xp1/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: $(cd-hostname)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port: 
              number: 80
  - host: $(cm-hostname)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm
            port: 
              number: 80
  - host: $(id-hostname)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port: 
              number: 80
  tls:
  - secretName: global-cd-tls
    hosts:
    - $(cd-hostname)
  - secretName: global-cm-tls
    hosts:
    - $(cm-hostname)
  - secretName: global-id-tls
    hosts:
    - $(id-hostname)
